[package]
name = "bsq-rs"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false

[profile.release]
opt-level = 3
codegen-units = 1
panic = "abort"
lto = "fat"
strip = true
overflow-checks = false

[dependencies]
memchr = "2.7.4"

[target.x86_64-unknown-linux-musl]
linker = "musl-gcc"
rustflags = ["-C", "target-feature=+crt-static"]
