[package]
name = "bsq-rs"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "benchmark"
harness = false

[profile.release]
opt-level = 3
codegen-units = 1
panic = "abort"
lto = "fat"
strip = true
overflow-checks = false

[profile.dev]
debug = 2
opt-level = 0
debug-assertions = true
split-debuginfo = "unpacked"

[dependencies]
memmap = "0.7.0"
